@@ -28,7 +28,6 @@ t/17untainted-multiline-values.t
 t/18non-contiguous-groups.t
 t/19param-found-outside-section.t
 t/20allowedcommentchars.t
-t/21multiline-values-in-tied.t
 t/22trailing-comment-lines.t
 t/allowed-comment-chars.ini
 t/array.ini
